@@ -57,15 +57,28 @@ if(!$uid or empty($uid)) {
 
 // Special handling of "route" apids in form R<apid>,<coreid>
 // <apid> is user selection, <coreid> is ID of airport map is centered around
-if(substr($apid, 0, 1) == "R") {
+$type = substr($apid, 0, 1);
+if($type == "R" || $type == "L") {
   $route = true;
   $ids = explode(',', substr($apid, 1));
   $apid = $ids[0];
   $coreid = $ids[1];
-  if($apid == $coreid) {
-    $match = "r.src_apid=$apid"; // all flights from $apid
+  if($type == "L") {
+    if($coreid == "") {
+      $match = "r.alid=$apid"; // all routes on $alid
+    } else {
+      $match = "r.src_apid=$coreid AND r.alid=$apid"; // flight from $coreid on $alid only
+    }
   } else {
-    $match = "r.src_apid=$coreid AND r.dst_apid=$apid"; // flight from $coreid to $apid only
+    if($apid == $coreid) {
+      $match = "r.src_apid=$apid"; // all flights from $apid
+    } else {
+      $match = "r.src_apid=$coreid AND r.dst_apid=$apid"; // flight from $coreid to $apid only
+    }
+    // Airline filter on top of airport
+    if($alid) {
+      $match .= " AND r.alid=$alid";
+    }
   }
   $sql = "SELECT s.x AS sx,s.y AS sy,s.iata AS src_iata,s.icao AS src_icao,s.apid AS src_apid,d.x AS dx,d.y AS dy,d.iata AS dst_iata,d.icao AS dst_icao,d.apid AS dst_apid,l.iata as code, '-' as src_date, '-' as src_time, '-' as distance, '-:-' AS duration, '' as seat, '' as seat_type, '' as class, '' as reason, r.equipment AS name, '' as registration,rid AS fid,l.alid,'' AS note,NULL as trid,'N' AS opp,NULL as plid,l.iata AS al_iata,l.icao AS al_icao,l.name AS al_name,'F' AS mode,codeshare,stops FROM airports AS s,airports AS d, airlines AS l,routes AS r WHERE $match AND r.src_apid=s.apid AND r.dst_apid=d.apid AND r.alid=l.alid";
 
@@ -90,7 +103,10 @@ switch($export) {
    break;
 
  default:
-   $sql = $sql . getFilterString($HTTP_POST_VARS);
+   // Full filter only for user flight searches
+   if(! $route) {
+     $sql = $sql . getFilterString($HTTP_POST_VARS);
+   }
    break;
 }
 if($fid && $fid != "0") {
@@ -99,7 +115,11 @@ if($fid && $fid != "0") {
 
 // And sort order
 if($route) {
-  $sql .= " ORDER BY d.iata ASC";
+  if($type == "R") {
+    $sql .= " ORDER BY d.iata ASC";
+  } else {
+    $sql .= " ORDER BY s.iata,d.iata ASC";
+  }
 } else {
   $sql .= " ORDER BY src_date DESC, src_time DESC";
 }
