@@ -1,3 +1,9 @@
+<b>2009-07-XX</b>
+
+* Quick search now supports airlines
+* Airline filter can now be used for airport route maps
+* Statsbox not shown in route map mode
+
 <b>2009-07-02</b>
 
 * Launched German (de), Lithuanian (lt), Polish (pl), Swedish (sv)
